scaffold/templates/google-project/template/deploy/04-frontend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ${DOCKER_REGISTRY}/${GCP_PROJECT_ID}/${IMAGE_FRONTEND}:${SHA_TAG}
        ports:
        - containerPort: 80
